fixed an issue - not showing the summary tab for the first search

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
 body {
   background: #d38312; /* fallback for old browsers */
   background: -webkit-linear-gradient(
@@ -16,7 +14,9 @@ body {
   font-family: "Open Sans", sans-serif;
   margin: 0;
 }
-
+.navbar-brand {
+  font-family: "Josefin Sans", sans-serif;
+}
 .search {
   width: 100%;
   position: relative;
