--- a/assets/stylesheets/landingpage.css
+++ b/assets/stylesheets/landingpage.css
@@ -11,6 +11,9 @@
   padding: 30px;
   border-radius: 30px;
 }
+.navbar-brand {
+  font-family: "Josefin Sans", sans-serif;
+}
 #landing-description h1 {
   font-family: "Anton", sans-serif;
   font-size: 70px;
